# Lynxes

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: README.md  bench.yml  ci.yml  release.yml
Doc_refactoring/: 00_Basic.md  01_Concept.md  02_Guide.md  03_Cookbook.md  04_Reference.md  05_Example.md
crates/graphframe-cli/: Cargo.toml
crates/graphframe-cli/src/: main.rs
crates/graphframe-core/: Cargo.toml
crates/graphframe-core/benches/: astar_vs_dijkstra.rs  csr_vs_linear.rs  in_csr_build.rs  parallel_expand.rs
crates/graphframe-core/src/: error.rs  lib.rs
crates/graphframe-core/src/algo/: centrality.rs  community.rs  mod.rs  pagerank.rs  partition.rs  shortest_path.rs
crates/graphframe-core/src/connector/: arangodb_connector.rs  flight_connector.rs  gf_connector.rs  neo4j_connector.rs
crates/graphframe-core/src/frame/: graph_frame.rs  node_frame.rs
crates/graphframe-core/src/io/: gf_parser.rs  gf_writer.rs  parquet.rs
crates/graphframe-core/src/query/: expr.rs  mod.rs
crates/graphframe-core/src/query/optimizer/: mod.rs
crates/graphframe-core/src/schema/: mod.rs  types.rs
crates/graphframe-core/tests/: algo_astar.rs  algo_betweenness.rs  algo_centrality.rs  algo_community.rs  algo_connected_components.rs  algo_k_shortest.rs  algo_pagerank.rs  algo_shortest_path.rs  algo_traversal.rs  connector_arango.rs  connector_gf.rs  connector_neo4j.rs  connector_sparql.rs  connector_trait.rs  csr_tests.rs  frame_edge.rs  frame_graph.rs  integration.rs  io_gf_parser.rs  io_gfb_bytes.rs  io_gfb_streaming.rs  io_parquet.rs  node_frame_tests.rs  optimizer.rs  query_lazy.rs
crates/graphframe-core/tests/common/: mod.rs
crates/graphframe-py/: Cargo.toml
crates/graphframe-py/src/: lib.rs
crates/lynxes/: Cargo.toml
crates/lynxes-cli/: Cargo.toml
crates/lynxes-cli/src/: main.rs
crates/lynxes-connect/: Cargo.toml
crates/lynxes-connect/src/: lib.rs
crates/lynxes-connect/src/connector/: flight_connector.rs  gf_connector.rs  neo4j_connector.rs
crates/lynxes-core/: Cargo.toml
crates/lynxes-core/benches/: astar_vs_dijkstra.rs  csr_vs_linear.rs  mutation_bench.rs  parallel_expand.rs  pattern_match_bench.rs  sampling_bench.rs  terminal_projection.rs
crates/lynxes-core/src/: error.rs  lib.rs  wasm.rs
crates/lynxes-core/src/algo/: centrality.rs  connected_components.rs  mod.rs  partition.rs  sampling.rs  shortest_path.rs
crates/lynxes-core/src/connector/: sparql_connector.rs
crates/lynxes-core/src/display/: profile.rs  projection.rs  width.rs
crates/lynxes-core/src/frame/: csr.rs  edge_frame.rs  graph_frame.rs  mod.rs  mutable_graph_frame.rs  node_frame.rs
crates/lynxes-core/src/io/: frame_builder.rs  gfb.rs  mod.rs
crates/lynxes-core/src/query/: executor.rs  expr.rs  lazy_graph_frame.rs  logical_plan.rs  mod.rs
crates/lynxes-core/src/query/optimizer/: mod.rs  pattern_expansion.rs
crates/lynxes-core/src/schema/: mod.rs
crates/lynxes-core/tests/: algo_centrality.rs  connector_arango.rs  connector_gf.rs  connector_neo4j.rs  connector_sparql.rs  display_projection.rs  frame_edge.rs  frame_graph.rs  gnn.rs  integration.rs  io_gfb_bytes.rs  io_gfb_streaming.rs  io_parquet.rs  node_frame_tests.rs  query_lazy.rs
crates/lynxes-io/: Cargo.toml
crates/lynxes-io/src/: lib.rs
crates/lynxes-io/src/io/: frame_builder.rs  gf_parser.rs  gf_writer.rs  gfb.rs  graphframe.pest  mod.rs  parquet.rs
crates/lynxes-lazy/: Cargo.toml
crates/lynxes-lazy/src/: lib.rs
crates/lynxes-lazy/src/query/: executor.rs  lazy_graph_frame.rs
crates/lynxes-lazy/src/query/executor/: aggregation.rs  expr_eval.rs  filter.rs  mod.rs  pattern.rs  tests.rs  traversal.rs
crates/lynxes-plan/: Cargo.toml
crates/lynxes-plan/src/: lib.rs
crates/lynxes-plan/src/query/: expr.rs  logical_plan.rs  mod.rs
crates/lynxes-plan/src/query/optimizer/: early_termination.rs  mod.rs  partition_parallel.rs  predicate_pushdown.rs  projection_pushdown.rs  subgraph_caching.rs  traversal_pruning.rs
crates/lynxes-python/src/: lib.rs
crates/lynxes-wasm/src/: lib.rs
crates/lynxes/src/: lib.rs
docs/: README.md  gf_authoring_guide.md  gf_authoring_guide_ko.md  index.md  install.md
docs/concepts/: gnn-feature-store.md  index.md  lazy-engine.md  memory-layout-and-csr.md  mutation-and-preprocessing.md  trade-offs.md  why-lynxes.md
docs/cookbook/: community-detection.md  ego-network.md  export-and-roundtrip.md  index.md  pagerank.md  shortest-path.md
docs/guides/: README.md  algorithms.md  benchmarks.md  connectors.md  errors-and-debugging.md  filtering-and-selection.md  first-algorithm-run.md  first-graph-query.md  getting-started-cli.md  getting-started-python.md  gnn-integration.md  graph-preprocessing.md  index.md  inspecting-graphs.md  io-roundtrip.md  kg-pattern-matching.md  loading-data.md  traversal-and-expand.md  verify-your-install.md
docs/quickstart/: cli.md  python.md
docs/reference/: README.md  index.md
docs/reference/cli/: README.md  gf-convert.md  gf-inspect.md  gf-query.md  gf.md  output-views.md
docs/reference/formats/: README.md  gf.md  gfb.md  parquet-interop.md  reserved-columns.md
docs/reference/python/: aggexpr.md  connectors.md  edgeframe.md  errors.md  expr.md  graph-export.md  graphframe.md  index.md  lazygraphframe.md  module-io.md  mutablegraphframe.md  nodeframe.md
examples/: README.md
examples/python/recipes/: community_detection.py  io_roundtrip.py  pagerank.py
examples/python/tutorials/: 01_read_and_inspect.py  02_lazy_expand.py  03_first_algorithm.py
py-lynxes/: README.md  pyproject.toml  run_bench.py
py-lynxes/src/lynxes/: __init__.py
py-lynxes/tests/benchmark/: bench_vs_igraph.py  bench_vs_networkx.py
py-lynxes/tests/unit/: conftest.py  test_algorithms.py  test_bindings.py  test_display.py  test_examples.py  test_expr.py  test_frames.py  test_gnn.py  test_io.py  test_kg.py  test_lazy.py  test_mutation.py
python/benchmarks/: bench_vs_igraph.py  bench_vs_networkx.py
python/tests/: conftest.py  test_bindings.py
www/: index.html  index.js
