[project]
name = "lynxes"
version = "1.2.1"
description = "A graph analytics engine built directly on Apache Arrow"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lynxes" }]
keywords = ["graph", "arrow", "analytics", "lynxes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "../crates/lynxes-python/Cargo.toml"
python-source = "src"
module-name = "lynxes._lynxes"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[dependency-groups]
dev = [
    "maturin>=1.13.1",
    "pytest>=8.0",
    "pyarrow>=17.0",
    "ruff>=0.8",
]
benchmark = [
    "igraph>=0.11",
    "networkx>=3.0",
    "numpy>=1.24",
    "scipy>=1.15.3",
]
