[package]
name = "graphframe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
arrow-array  = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
graphframe-core = { path = "../graphframe-core" }

[dev-dependencies]
arrow-schema = { workspace = true }

