[package]
name = "graphframe-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "graphframe_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
arrow = { workspace = true, features = ["pyarrow"] }
graphframe-core = { path = "../graphframe-core" }
pyo3 = { workspace = true, features = ["abi3-py310"] }
